Add backent userfrone api call to get user details

--- a/.env.placeholder
+++ b/.env.placeholder
@@ -2,3 +2,4 @@ MONGO_URI=Add URI here
 INLINE_RUNTIME_CHUNK=false
 APP_URL=https://appnamehere.herokuapp.com/
 USERFRONT_PUBLIC_KEY=Add Key Here
+USERFRONT_API_KEY=Add key for api calls here
