--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,21 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Iyashi Members",
+  "name": "Bujinkan Iyashi Dojo Members App",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "Logo-Icon-100x100.png",
+      "sizes": "100x100",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "Logo-200x200.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "200x200"
     }
   ],
   "start_url": ".",
