--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "200x200"
     }
   ],
-  "start_url": ".",
+  "start_url": "/posts",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
